--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -49,7 +49,7 @@
 					<ul>
 						<li class="contact"><address><span class="author fn n">{{ site.author.name }}</span> - <span class="fn email">{{ site.author.email }}</span></address></li>
 						<li class="github"><a href="http://github.com/{{ site.author.github }}/" rel="me">github.com/{{ site.author.github }}</a></li>
-						<li class="gscholar"><a href="http://scholar.google.com/{{ site.author.gscholar }}" rel="me">scholar.google.com/{{ site.author.gscholar }}</a></li>
+						<li class="gscholar"><a href="http://scholar.google.com/citations?user=5KurcogAAAAJ&hl=en" rel="me">publications on google scholar</a></li>
 					</ul>
 				</div><!-- misc -->
 				<p class="licence">
