--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -12,11 +12,10 @@
 	<link href="http://feeds.feedburner.com/{{ site.author.feedbaname }}" rel="alternate" title="{{ page.title }}" type="application/atom+xml">
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
 	<script type="text/javascript"
-  		src="https://d3eoax9i5htok0.cloudfront.net/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+  		src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 	</script>
 </head>
 <body>
-
 <div id="page" class="hentry">
 	<header class="the-header">
 		<div class="unit-head">
