--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -14,6 +14,14 @@
 	<script type="text/javascript"
   		src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 	</script>
+	<script type="text/x-mathjax-config">
+		MathJax.Hub.Config({
+		  	tex2jax: {
+  				inlineMath: [['$','$'], ['\\(','\\)']],
+  				processEscapes: true
+  			}  			
+		});
+	</script>
 </head>
 <body>
 <div id="page" class="hentry">
